fixed letter shifting

--- a/src/index.css
+++ b/src/index.css
@@ -29,5 +29,24 @@ code {
   text-align: right;
 }
 
-.rowC{display:flex; flex-direction:row;}
-.colC{float: left; width: 5%; }
+.rowC{display:flex; flex-direction:row;
+  border-bottom: 3px solid #000000;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 3px;
+  height: 50px;
+  width: 20px;
+}
+
+.colC{float: left; width: 5%;
+  border-bottom: 3px solid #000000;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 3px;
+  height: 50px;
+  width: 20px;
+
+
+}
